--- a/Practice_2020/HW7-8/index.html
+++ b/Practice_2020/HW7-8/index.html
@@ -58,7 +58,10 @@
                 <div class="carousel__item">
                     <div class="carousel__title">lorem ipsum dolor</div>
                     <div class="carousel__subtitle">it will make all your dreams come</div>
-                    <div class="carousel__description hidden"></div>
+                    <div class="carousel__text hidden_less-than-768 text text_preview">
+                        Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est,
+                        et auctor turpis ornare a. Nam venenatis hendrerit est at volutpat. Morbi elementum euismod
+                        lacus id semper.</div>
                 </div>
                 <img class="carousel__img hidden_less-than-320" src="carousel/carousel_img.png" alt="iphone">
                 <a class="carousel__link" href="#">
@@ -130,7 +133,7 @@
         <div class="main-content__wrapper">
              <div class="main-content__item">
                  <article class="article main-content__article">
-                     <div class="article__icon "></div>
+                     <img class="article__icon " src="main-content/main-content_avatar.png">
                      <h2 class="article__title text-uppercase">pingbuller
                          <span class="main-content__article-subtitle">
                              starts here
