--- a/Practice_2020/HW7-8/index.html
+++ b/Practice_2020/HW7-8/index.html
@@ -216,7 +216,7 @@
         </div>
     </aside>
  <!--NEWS-->
-    <section class="news hidden_less-than-320 ">
+    <section class="news hidden_less-than-320 page__news">
         <article class="article news__article">
             <h2 class="article__title text-uppercase">pingbull<span>er</span></h2>
             <div class="news__copyright">Copyright 2013, Pingbull AS</div>
